2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_spf.[ch]: Added TE TLVs to the SPF process. It seems to work
	  mostly, but needs certainly much more testing, especially transition
	  situation.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Put correct metric info into TE TLV's. Wide metric is
	  used only if only wide metric style (extended TLV's) is in use.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_tlv.[ch]: New function tlv_add_in_addr() to put just one IPv4
	  address into TLV. Used for IPv4 address TLV (in case of LSP) and TE
	  router ID TLV.
	* isis_lsp.c: Use tlv_add_in_addr() and include router ID in LSP.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Support for originating TE IS and IPv4 TLV's. No any sub
	  TLV handling yet.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_tlv.[ch]: Two new functions - tlv_add_te_is_neighs() and
	  tlv_add_te_ipv4_reachs() to handle TLV's with new metric. None of
	  them handle sub TLVs though for now.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_circuit.[ch]: Some preliminary support for specifying wide
	  circuit metrics. Needs more thinking though, but should do for now.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isisd.[ch]: Introduce oldmetric flag for area and transition
	  metricstyle command. With metricstyle wide only extended TLVs
	  should be used.

2005-09-25 Hasso Tepper <hasso at quagga.net>

	* dict.[ch]: Revert all nonfunctional changes. It's external module
	  imported from kazlib and it's better not to screw it - there is
	  theoretical chance that we might want to merge changes from upstream
	  at some point. Also avoid the loss of info about upstream version
	  (rcsid).

2005-09-21 Hasso Tepper <hasso at quagga.net>

	* isis_route.c: Fix output of nexthops in case of extreme debug.

2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c, isis_pdu.c, isis_spf.c: Remove some old unused code.
